--- a/app/src/main/res/layout/fragment_listings.xml
+++ b/app/src/main/res/layout/fragment_listings.xml
@@ -7,15 +7,49 @@
     android:layout_height="match_parent"
     android:background="@color/teal_200">
 
-    <ListView
-        android:id="@+id/listList"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listheader="@layout/listing_hd"
-        tools:listitem="@layout/listing_item" />
+    <TextView
+        android:id="@+id/view_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:text="View Events"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"  />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/event_type_lv"
+        android:layout_marginTop="4dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/view_event"
+        app:layout_constraintTop_toBottomOf="@+id/view_tv">
+        <EditText
+            android:id="@+id/event_type_v"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Event type"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <Button
+        android:id="@+id/view_event"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        style="@style/Widget.AppCompat.Button.Colored"
+        app:layout_constraintLeft_toRightOf="@+id/event_type_lv"
+        app:layout_constraintRight_toRightOf= "parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_tv"
+        android:text="View Events"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/events_lst"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_event"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
