--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -10,56 +10,46 @@
         android:id="@+id/view_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="View Events"
-        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:text="View Events"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"  />
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/event_type_lv"
-        android:layout_width="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/events_lst"
-        app:layout_constraintEnd_toStartOf="@+id/view_event"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/view_event"
         app:layout_constraintTop_toBottomOf="@+id/view_tv">
-
         <EditText
             android:id="@+id/event_type_v"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Event type" />
+            android:hint="Event type"/>
     </com.google.android.material.textfield.TextInputLayout>
-
     <Button
         android:id="@+id/view_event"
-        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="View Events"
-        app:layout_constraintBottom_toTopOf="@+id/events_lst"
+        android:layout_marginTop="4dp"
+        style="@style/Widget.AppCompat.Button.Colored"
         app:layout_constraintLeft_toRightOf="@+id/event_type_lv"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_tv" />
-
+        app:layout_constraintTop_toBottomOf="@+id/view_tv"
+        android:text="View Events"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/events_lst"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:scrollbars="vertical"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_type_lv" />
+        app:layout_constraintTop_toBottomOf="@+id/view_event"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
