--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/book_d"
             android:icon="@drawable/ic_baseline_book_24"
-            android:title="availabl" />
+            android:title="Available Stakes" />
         <item
             android:id="@+id/prog_dr"
             android:icon="@drawable/ic_baseline_pending_24"
@@ -18,6 +18,14 @@
             android:id="@+id/pay_dr"
             android:icon="@drawable/ic_baseline_payment_24"
             android:title="Payment" />
+        <item
+            android:id="@+id/swap_a"
+            android:icon="@drawable/ic_baseline_supervisor_account_24"
+            android:title="Switch Account" />
+        <item
+            android:id="@+id/exit"
+            android:icon="@drawable/ic_baseline_exit_to_app_24"
+            android:title="Log Out" />
 
     </group>
 </menu>
