--- a/app/src/main/res/layout/customer_home.xml
+++ b/app/src/main/res/layout/customer_home.xml
@@ -57,7 +57,7 @@
     </androidx.drawerlayout.widget.DrawerLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNav_t"
+        android:id="@+id/bottomNav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
