--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,16 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="home"
-        />
+        android:id="@+id/request"
+        android:icon="@drawable/ic_baseline_post_add_24"
+        android:title="New Request" />
     <item
         android:id="@+id/event"
         android:icon="@drawable/ic_baseline_wysiwyg_24"
         android:title="Stakes" />
     <item
-        android:id="@+id/scdule"
+        android:id="@+id/schedule"
         android:icon="@drawable/ic_baseline_event_24"
         android:title="schedule" />
 </menu>
