--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -7,19 +7,19 @@
             android:icon="@drawable/ic_baseline_add_circle_outline_24"
             android:title="Request a service" />
         <item
-            android:id="@+id/book_d"
-            android:icon="@drawable/ic_baseline_book_24"
-            android:title="Available Stakes" />
-        <item
             android:id="@+id/prog_dr"
             android:icon="@drawable/ic_baseline_pending_24"
             android:title="progress" />
         <item
             android:id="@+id/pay_dr"
             android:icon="@drawable/ic_baseline_payment_24"
-            android:title="Payment" />
+            android:title="Wallet" />
         <item
-            android:id="@+id/swap_a"
+            android:id="@+id/settings"
+            android:icon="@drawable/ic_baseline_book_24"
+            android:title="Settings" />
+        <item
+            android:id="@+id/swap"
             android:icon="@drawable/ic_baseline_supervisor_account_24"
             android:title="Switch Account" />
         <item
