--- a/app/src/main/res/menu/techs_drawer.xml
+++ b/app/src/main/res/menu/techs_drawer.xml
@@ -10,7 +10,9 @@
     <item
         android:icon="@drawable/ic_baseline_person_pin_circle_24"
         android:title="Home Base" />
-    <item android:title="Security" />
+    <item
+        android:icon="@drawable/ic_baseline_fingerprint_24"
+        android:title="Security" />
     <item
         android:icon="@drawable/ic_baseline_exit_to_app_24"
         android:title="Log Out" />
