--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -13,5 +13,5 @@
     <item
         android:id="@+id/schedule"
         android:icon="@drawable/ic_baseline_event_24"
-        android:title="schedule" />
+        android:title="Appointments" />
 </menu>
